# llm-zoomcamp-2026

./: .gitignore  main.py  notebook.ipynb  pyproject.toml
1-agentic-rag/: README.md  _agentic_rag.ipynb  _persistent_rag.ipynb  _rag_from_scripts.ipynb  _rag_step_by_step.ipynb  _sqlite_ingest.ipynb  ingest.py  rag_helper.py
1-agentic-rag/homework/: agentic-rag-hw.ipynb  rag_helper.py
2-vector-search/: README.md  _vector_search.ipynb  _vector_search_persistent.ipynb  _vector_search_pgvector.ipynb
2-vector-search/homework/: vector_search_hw.ipynb
4-evaluation/: _agent_eval.ipynb  _data_gen.ipynb  _rag_eval.ipynb  _search_eval.ipynb
4-evaluation/data/: agent-answers.csv  agent-evaluations.csv  ground_truth-new.csv  rag-answers-new.csv  rag-evaluations-new.csv
4-evaluation/homework/: evaluation-hw.ipynb
